@@ -241,16 +241,25 @@ Skyscraper.SBS.Elevator.AlarmSound = bell1.wav
 ;sound file for alarm stop
 Skyscraper.SBS.Elevator.AlarmSoundStop = bell1-stop.wav
 
-;start elevators in uppeak mode
+;starts elevators in ACP mode
+Skyscraper.SBS.Elevator.ACP = false
+
+;sets ACP floor
+Skyscraper.SBS.Elevator.ACPFloor = 0
+
+;starts elevators in uppeak mode
 Skyscraper.SBS.Elevator.UpPeak = false
 
-;start elevators in downpeak mode
+;starts elevators in uppeak mode
+Skyscraper.SBS.Elevator.UpPeak = false
+
+;starts elevators in downpeak mode
 Skyscraper.SBS.Elevator.DownPeak = false
 
-;start elevators in independent service mode
+;starts elevators in independent service mode
 Skyscraper.SBS.Elevator.IndependentService = false
 
-;start elevators in inspection service mode
+;starts elevators in inspection service mode
 Skyscraper.SBS.Elevator.InspectionService = false
 
 ;use automatic queue resets
